--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+header{padding:20px;font-size:24px;color:#fff;background-color: #000;}
+
 .list{
 	font-size:14px;
 	border-bottom:1px solid #ebebeb;
