--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,9 @@
+header{
+	font-size:24px;
+	color:#fff;
+	padding:30px;
+	background-color: black;
+}
 .list{
 	font-size:14px;
 	border-bottom:1px solid #ebebeb;
